Signed-off-by: KahlZhang <473930123@qq.com>

--- a/Homepage/academic_writing.html
+++ b/Homepage/academic_writing.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Critical Thinking</title>
-  <link rel="stylesheet" href="main.css" type="text/css">
+  <title>Academic Writing</title>
+  <link rel="stylesheet" href="sub.css" type="text/css">
 </head>
+
 <body>
 <header>
   <div class="widthsize">
     <img src="title.png" alt="CDU logo" class="logo">
-    <input type="text" placeholder="Search ..." class="searchbar">
+    <input type="text" placeholder="Search..." class="searchbar">
   </div>
 </header>
+
 <section>
   <div class="widthsize">
     <nav>
@@ -51,9 +53,33 @@
   <div id="main">
     <button class="openbtn" onclick="openNav()">☰ Study Skills Home</button>
   </div>
-
-  </div>
 </section>
+
+<section class="section-style js--section-style">
+  <div class="widthsize">
+    <h2>Critical Thinking For Academic Writing</h2>
+
+    <div class="container">
+      <div class="card-wrapper">
+        <div class="card">
+
+          <div class="subheading">
+          <h3>For Academic Writing</h3>
+          </div>
+
+          <img src="1.png" alt="TitleCriticalThinking" class="card-img" style="width:100%">
+          <div class="container-p">
+          <p>
+            When writing at university, your aim is to convince the reader by using critical thinking to promote your argument.
+          </p>
+          <p>
+            Ask yourself the following questions when you are planning and writing your first draft.
+          </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
 
 <!--Introduction nad parpgraph section end-->
@@ -64,40 +90,61 @@
   <div class="container">
     <div class="card-wrapper">
       <div class="card">
-        <div class="subheading">
-        <h3>Introduction of Critical Thinking</h3>
-      </div>
-        <img src="1.png" alt="TitleCriticalThinking" class="card-img" style="width:100%">
-        <div class="container-p">
-        <p>
-          Weighing up alternatives in order to make decisions is part of the critical thinking process.
-        </p>
-      </div>
-      </div>
+        <div class="subheading-2">
+          <h3>List of Question</h3>
+        </div>
+        <div class="QQ">
+          1. What is your purpose in writing?
+        </div>
+        <div class="QQ">
+          2. Have you clearly formulated your thesis/argument?
+        </div>
+        <div class="QQ">
+          3. Have you gathered the evidence to support your argument? Is your argument rational and logical?
+        </div>
+        <div class="QQ">
+          4. Is your argument rational and logical?
+        </div>
 
-      <div class="card">
-        <div class="subheading">
-        <h3>Definition of Critical Thinking</h3>
-      </div>
-        <img src="2.jpg" alt="photo2" class="card-img" style="width:100%">
         <div class="container-p">
-        <p>
-          Critical thinking involves active involvement.You are not passively accepting everything that you read or hear but are questioning
-        </p>
-      </div>
+          <p>
+            5.Have you provided your reader with accurate references?
+          </p>
+        </div>
+
+        <div class="button-style">
+          <a class="button" href="index.html">Back Home</a>
+        </div>
       </div>
 
       <div class="card">
         <div class="subheading-2">
-        <h3>Reading Critical</h3>
-      </div>
-        <img src="3.png" alt="photo3" class="card-img" style="width:100%">
+          <h3>List of Question</h3>
+        </div>
+        <div class="QQ">
+          6. Have you read widely to gain a broad perspective on the topic?
+        </div>
+        <div class="QQ">
+          7. Have you gathered the evidence to support your argument?
+        </div>
+        <div class="QQ">
+          8. Have you been accurate in your claims?
+        </div>
+        <div class="QQ">
+          9. Have you addressed the question?
+        </div>
+
         <div class="container-p">
-        <p >
-          One of the key strategies you can use when reading critically is to ask yourself a series of questions.
-        </p>
+          <p>
+          10. Have you expressed yourself clearly? Have you used examples to illustrate your point?
+          </p>
+        </div>
+        <div class="button-style">
+          <a class="button" href="index.html">Back Home</a>
+        </div>
       </div>
-      </div>
+    </div>
+  </div>
 </section>
 
 
@@ -105,21 +152,18 @@
   <div class="widthsize">
     <div >
       <ul  class="social-links">
-        <li><a href="https://www.facebook.com/CharlesDarwinUniversity/"> <img src="Facebook.png" class="logo-mini"></a></li>
-        <li><a href="https://twitter.com/cduni?lang=en"> <img src="Twitter.png" class="logo-mini"></a></li>
-        <li><a href="https://www.instagram.com/charlesdarwinuniversity/?hl=en"> <img src="Instagram.png" class="logo-mini"></a></li>
+        <li><a href="https://www.facebook.com/CharlesDarwinUniversity/"> <img src="Facebook.png" class="logo-mini" alt="FaceBook"></a></li>
+        <li><a href="https://twitter.com/cduni?lang=en"> <img src="Twitter.png" class="logo-mini" alt="Twitter"></a></li>
+        <li><a href="https://www.instagram.com/charlesdarwinuniversity/?hl=en"> <img src="Instagram.png" class="logo-mini" alt="Instagram"></a></li>
       </ul>
-
     </div>
-
 
     <div class="widthsize">
       <h4>
         Copyright: 2019 by CDU. ALL right reserve
       </h4>
-
     </div>
-
+  </div>
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
