--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -5,13 +5,17 @@
   <title>Critical Thinking</title>
   <link rel="stylesheet" href="main.css" type="text/css">
 </head>
+
 <body>
 <header>
   <div class="widthsize">
     <img src="title.png" alt="CDU logo" class="logo">
-    <input type="text" placeholder="Search ..." class="searchbar">
+    <label>
+      <input type="text" placeholder="Search ..." class="searchbar">
+    </label>
   </div>
 </header>
+
 <section>
   <div class="widthsize">
     <nav>
@@ -31,7 +35,7 @@
       </ul>
       <!--<a class="mobile-nav-icon"><img src="smallnav.png"/></a> -->
     </nav>
-    <a href="#" class="mobile-nav-icon js--nav-icon"><img src="smallnav.png"/></a>
+    <a href="#" class="mobile-nav-icon js--nav-icon"><img src="smallnav.png" alt="smallnav"/></a>
   </div>
 
   <div id="mySidebar" class="sidebar">
@@ -51,10 +55,8 @@
   <div id="main">
     <button class="openbtn" onclick="openNav()">☰ Study Skills Home</button>
   </div>
+</section>
 
-  </div>
-</section>
-</section>
 <section class="section-style js--section-style">
   <div class="widthsize">
     <h2>Critical thinking</h2>
@@ -65,10 +67,10 @@
           <div class="subheading">
           <h3>Introduction</h3>
         </div>
-            <img class="image-logo" src="1024px-Critical_Thinking_Skills_Diagram.svg.png" alt="crtical thinking explain">
+            <img class="image-logo" src="7.png" alt="critical thinking explain">
           <div class="container-p">
           <p>
-             Critical thinking is necessary and benetfit for students.
+             Critical thinking is necessary and benefit for students.
           </p>
         </div>
           <div class="button-style">
@@ -77,6 +79,7 @@
         </div>
       </div>
     </div>
+  </div>
 </section>
 
 <!--Introduction nad parpgraph section end-->
@@ -102,7 +105,7 @@
       </div>
       <div class="card">
         <div class="subheading">
-        <h3>Critical thinking is a tool for decision making</h3>
+        <h3>Critical Thinking is a Tool For Decision Making</h3>
       </div>
         <img src="1.png" alt="TitleCriticalThinking" class="card-img" style="width:100%">
         <div class="container-p">
@@ -117,7 +120,7 @@
 
       <div class="card">
         <div class="subheading">
-        <h3>What does critical thinking involve</h3>
+        <h3>What Does Critical Thinking Involve</h3>
       </div>
         <img src="2.jpg" alt="photo2" class="card-img" style="width:100%">
         <div class="container-p">
@@ -145,14 +148,14 @@
         </p>
       </div>
         <div class="button-style">
-          <a class="button" href="ReadingCritical.html">Questions</a>
+          <a class="button" href="reading_critically.html">Questions</a>
         </div>
       </div>
 
 
       <div class="card">
         <div class="subheading-2">
-        <h3>For academic writing</h3>
+        <h3>For Academic Writing</h3>
       </div>
         <img src="5.png" alt="photo3" class="card-img" style="width:100%">
         <div class="container-p">
@@ -161,13 +164,13 @@
         </p>
       </div>
         <div class="button-style">
-          <a class="button" href="academicwriting.html">Learn More</a>
+          <a class="button" href="academic_writing.html">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="subheading">
-        <h3>Tutorial and semanier presentation</h3>
+        <h3>Tutorial and Seminar Presentation</h3>
       </div>
         <img src="6.jpg" alt="photo3" class="card-img" style="width:100%">
         <div class="container-p">
@@ -188,21 +191,18 @@
   <div class="widthsize">
     <div >
       <ul  class="social-links">
-        <li><a href="https://www.facebook.com/CharlesDarwinUniversity/"> <img src="Facebook.png" class="logo-mini"></a></li>
-        <li><a href="https://twitter.com/cduni?lang=en"> <img src="Twitter.png" class="logo-mini"></a></li>
-        <li><a href="https://www.instagram.com/charlesdarwinuniversity/?hl=en"> <img src="Instagram.png" class="logo-mini"></a></li>
+        <li><a href="https://www.facebook.com/CharlesDarwinUniversity/"> <img src="facebook.png" class="logo-mini" alt="FaceBook"></a></li>
+        <li><a href="https://twitter.com/cduni?lang=en"> <img src="twitter.png" class="logo-mini" alt="Twitter"></a></li>
+        <li><a href="https://www.instagram.com/charlesdarwinuniversity/?hl=en"> <img src="instagram.png" class="logo-mini" alt="Instagram"></a></li>
       </ul>
-
     </div>
-
 
     <div class="widthsize">
       <h4>
         Copyright: 2019 by CDU. ALL right reserve
       </h4>
-
     </div>
-
+  </div>
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
