--- a/Homepage/reading_critically.html
+++ b/Homepage/reading_critically.html
@@ -2,16 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Critical Thinking</title>
-  <link rel="stylesheet" href="academic.css" type="text/css">
+  <title>Reading Critically</title>
+  <link rel="stylesheet" href="sub.css" type="text/css">
 </head>
+
 <body>
 <header>
   <div class="widthsize">
     <img src="title.png" alt="CDU logo" class="logo">
-    <input type="text" placeholder="Search ..." class="searchbar">
+    <label>
+      <input type="text" placeholder="Search ..." class="searchbar">
+    </label>
   </div>
 </header>
+
 <section>
   <div class="widthsize">
     <nav>
@@ -31,7 +35,7 @@
       </ul>
       <!--<a class="mobile-nav-icon"><img src="smallnav.png"/></a> -->
     </nav>
-    <a href="#" class="mobile-nav-icon js--nav-icon"><img src="smallnav.png"/></a>
+    <a href="#" class="mobile-nav-icon js--nav-icon"><img src="smallnav.png" alt="smallnav"/></a>
   </div>
 
   <div id="mySidebar" class="sidebar">
@@ -62,16 +66,17 @@
         <div class="card">
           <div class="subheading">
           <h3>What is Reading Critically</h3>
-        </div>
-          <img src="1.png" alt="TitleCriticalThinking" class="card-img" style="width:100%">
+          </div>
+            <img src="1.png" alt="TitleCriticalThinking" class="card-img" style="width:100%">
           <div class="container-p">
           <p>
           One of the key strategies you can use when reading critically is to ask yourself a series of questions.Begin by asking questions which relate to the text overall and then look at the author’s argument and the evidence used to support it.
           <p>
-
+          </div>
         </div>
       </div>
     </div>
+  </div>
 </section>
 
 <!--Introduction nad parpgraph section end-->
@@ -85,15 +90,18 @@
         <div class="subheading-2">
           <h3>For examine the overall creditability of the text</h3>
         </div>
-        <div class="QQ">1. Who is the author and when was this written?
+        <div class="QQ">
+          1. Who is the author and when was this written?
         </div>
-        <div class="QQ">2. What is the author’s approach and perspective?
+        <div class="QQ">
+          2. What is the author’s approach and perspective?
         </div>
-        <div class="QQ">3. On first reading, does this seem a credible argument? Why?
-          </div>
-          <div class="QQ">
+        <div class="QQ">
+          3. On first reading, does this seem a credible argument? Why?
+        </div>
+        <div class="QQ">
             4. What are the main points of this text?
-            </div>
+        </div>
 
         <div class="container-p">
           <p>
@@ -104,19 +112,23 @@
           <a class="button" href="index.html">Back Home</a>
         </div>
       </div>
+
       <div class="card">
         <div class="subheading-2">
-          <h3>Analysis the style and the tone of argument
+          <h3>Analysis the style and the tone of argument</h3>
         </div>
-        <div class="QQ">1.Is the argument clearly expressed?
+        <div class="QQ">
+          1.Is the argument clearly expressed?
         </div>
-        <div class="QQ">2. Does the author use emotive terms or examples to persuade the reader?
+        <div class="QQ">
+          2. Does the author use emotive terms or examples to persuade the reader?
         </div>
-        <div class="QQ">3. What assumptions does the author make?
-          </div>
-          <div class="QQ">
-            4. Do these strategies enhance or detract from the argument?
-            </div>
+        <div class="QQ">
+          3. What assumptions does the author make?
+        </div>
+        <div class="QQ">
+          4. Do these strategies enhance or detract from the argument?
+        </div>
 
         <div class="container-p">
           <p>
@@ -127,24 +139,27 @@
           <a class="button" href="index.html">Back Home</a>
         </div>
       </div>
-
     </div>
   </div>
+
   <div class="container">
     <div class="card-wrapper">
       <div class="card">
         <div class="subheading-2">
           <h3>For examine the argument and evidence</h3>
         </div>
-        <div class="QQ">1. What is the quality of the evidence?(Is the evidence anecdotal or supported by research and/or scientific study?)
+        <div class="QQ">
+          1. What is the quality of the evidence?(Is the evidence anecdotal or supported by research and/or scientific study?)
         </div>
-        <div class="QQ">2. Is the evidence recent and relevant?
+        <div class="QQ">
+          2. Is the evidence recent and relevant?
         </div>
-        <div class="QQ">3. Which parts of the argument do I agree with and why?
+        <div class="QQ">
+          3. Which parts of the argument do I agree with and why?
           </div>
-          <div class="QQ">
-            4. Is there a logical development of ideas?
-            </div>
+        <div class="QQ">
+          4. Is there a logical development of ideas?
+        </div>
 
         <div class="container-p">
           <p>
@@ -155,19 +170,23 @@
           <a class="button" href="index.html">Back Home</a>
         </div>
       </div>
+
       <div class="card">
         <div class="subheading-2">
           <h3>For Overall assessment of the writing</h3>
         </div>
-        <div class="QQ">1. What were the strengths of the argument?
+        <div class="QQ">
+          1. What were the strengths of the argument?
         </div>
-        <div class="QQ">2. Does the writing challenge your own biases, assumptions and beliefs?
+        <div class="QQ">
+          2. Does the writing challenge your own biases, assumptions and beliefs?
         </div>
-        <div class="QQ">3. What were the weaknesses of the argument?
-          </div>
-          <div class="QQ">
-            4. What connections do you see between this text and other texts?
-            </div>
+        <div class="QQ">
+          3. What were the weaknesses of the argument?
+        </div>
+        <div class="QQ">
+          4. What connections do you see between this text and other texts?
+        </div>
 
         <div class="container-p">
           <p>
@@ -178,10 +197,8 @@
           <a class="button" href="index.html">Back Home</a>
         </div>
       </div>
-
     </div>
   </div>
-
 </section>
 
 
@@ -189,21 +206,18 @@
   <div class="widthsize">
     <div >
       <ul  class="social-links">
-        <li><a href="https://www.facebook.com/CharlesDarwinUniversity/"> <img src="Facebook.png" class="logo-mini"></a></li>
-        <li><a href="https://twitter.com/cduni?lang=en"> <img src="Twitter.png" class="logo-mini"></a></li>
-        <li><a href="https://www.instagram.com/charlesdarwinuniversity/?hl=en"> <img src="Instagram.png" class="logo-mini"></a></li>
+        <li><a href="https://www.facebook.com/CharlesDarwinUniversity/"> <img src="facebook.png" class="logo-mini" alt="FaceBook"></a></li>
+        <li><a href="https://twitter.com/cduni?lang=en"> <img src="twitter.png" class="logo-mini" alt="Twitter"></a></li>
+        <li><a href="https://www.instagram.com/charlesdarwinuniversity/?hl=en"> <img src="instagram.png" class="logo-mini" alt="Instagram"></a></li>
       </ul>
-
     </div>
-
 
     <div class="widthsize">
       <h4>
         Copyright: 2019 by CDU. ALL right reserve
       </h4>
-
     </div>
-
+  </div>
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
