--- a/Homepage/academic_writing.html
+++ b/Homepage/academic_writing.html
@@ -33,7 +33,7 @@
       </ul>
       <!--<a class="mobile-nav-icon"><img src="smallnav.png"/></a> -->
     </nav>
-    <a href="#" class="mobile-nav-icon js--nav-icon"><img src="smallnav.png"/></a>
+    <a href="#" class="mobile-nav-icon js--nav-icon"><img src="smallnav.png" alt="smallnav"/></a>
   </div>
 
   <div id="mySidebar" class="sidebar">
