Signed-off-by: KahlZhang <473930123@qq.com>

--- a/Homepage/academic_writing.html
+++ b/Homepage/academic_writing.html
@@ -10,7 +10,9 @@
 <header>
   <div class="widthsize">
     <img src="title.png" alt="CDU logo" class="logo">
-    <input type="text" placeholder="Search..." class="searchbar">
+    <label>
+      <input type="text" placeholder="Search..." class="searchbar">
+    </label>
   </div>
 </header>
 
@@ -152,9 +154,9 @@
   <div class="widthsize">
     <div >
       <ul  class="social-links">
-        <li><a href="https://www.facebook.com/CharlesDarwinUniversity/"> <img src="Facebook.png" class="logo-mini" alt="FaceBook"></a></li>
-        <li><a href="https://twitter.com/cduni?lang=en"> <img src="Twitter.png" class="logo-mini" alt="Twitter"></a></li>
-        <li><a href="https://www.instagram.com/charlesdarwinuniversity/?hl=en"> <img src="Instagram.png" class="logo-mini" alt="Instagram"></a></li>
+        <li><a href="https://www.facebook.com/CharlesDarwinUniversity/"> <img src="facebook.png" class="logo-mini" alt="FaceBook"></a></li>
+        <li><a href="https://twitter.com/cduni?lang=en"> <img src="twitter.png" class="logo-mini" alt="Twitter"></a></li>
+        <li><a href="https://www.instagram.com/charlesdarwinuniversity/?hl=en"> <img src="instagram.png" class="logo-mini" alt="Instagram"></a></li>
       </ul>
     </div>
 
