--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -4,11 +4,26 @@
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Critical Thinking</title>
   <link rel="stylesheet" href="main.css" type="text/css">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
 <header>
   <div class="widthsize">
+    <nav class="second-nav">
+      <div  class="toggle">
+        <a class="fas fa-bars menu" aria-hidden="true"></a>
+      </div>
+        <ul class="second-ul">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Introduction</a></li>
+          <li><a href="#">Definition</a></li>
+          <li><a href="#">Decision Making</a></li>
+          <li><a href="#"> involvement</a></li>
+          <li><a href="#">Reading Critically</a></li>
+          <li><a href="#"> presentation</a></li>
+        </ul>
+      </nav>
     <img src="title.png" alt="CDU logo" class="logo">
     <label>
       <input type="text" placeholder="Search ..." class="searchbar">
@@ -208,5 +223,13 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="jquery.waypoints.min.js"></script>
 <script src="script.js" type="text/javascript"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+<script type="text/javascript">
+   $(document).ready(function(){
+     $('.menu').click(function(){
+       $('ul').toggleClass('active');
+     })
+   })
+  </script>
 </body>
 </html>
