--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -10,7 +10,7 @@
 <body>
 <header>
   <div class="widthsize">
-    <nav class="second-nav">
+    <nav class="second-nav js--second-nav">
       <div  class="toggle">
         <a class="fas fa-bars menu" aria-hidden="true"></a>
       </div>
@@ -50,7 +50,6 @@
       </ul>
       <!--<a class="mobile-nav-icon"><img src="smallnav.png"/></a> -->
     </nav>
-    <a href="#" class="mobile-nav-icon js--nav-icon"><img src="smallnav.png" alt="smallnav"/></a>
   </div>
 
   <div id="mySidebar" class="sidebar">
