Signed-off-by: KahlZhang <473930123@qq.com>

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -16,20 +16,36 @@
 
 <section>
   <div class="widthsize">
-        <nav class="second-nav js--second-nav">
-          <div  class="toggle">
-            <a class="fas fa-bars menu" aria-hidden="true"></a>
-          </div>
-            <ul class="second-ul">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Introduction</a></li>
-              <li><a href="#">Definition</a></li>
-              <li><a href="#">Decision Making</a></li>
-              <li><a href="#"> involvement</a></li>
-              <li><a href="#">Reading Critically</a></li>
-              <li><a href="#"> presentation</a></li>
-            </ul>
-      </nav>
+    <nav>
+      <ul class="main-nav js--main-nav">
+        <li>
+          <a>Home</a>
+        </li>
+        <li>
+          <a>Introduction</a>
+        </li>
+        <li>
+          <a>Definition</a>
+        </li>
+        <li>
+          <a>Decision Making</a>
+        </li>
+        <li>
+          <a>Involvement</a>
+        </li>
+        <li>
+          <a>Reading Critical</a>
+        </li>
+        <li>
+          <a>Presentation</a>
+        </li>
+        <li>
+          <a href="https://online.cdu.edu.au/webapps/portal/execute/tabs/tabAction?tab_tab_group_id=_3_1">Learnline Login</a>
+        </li>
+      </ul>
+      <!--<a class="mobile-nav-icon"><img src="smallnav.png"/></a> -->
+    </nav>
+    <a href="#" class="mobile-nav-icon js--nav-icon"><img src="smallnav.png" alt="smallnav"/></a>
   </div>
 </section>
 
