One of the content from the side navigation menu has been removed
Signed-off-by: YousufD2 <48338941+YousufD2@users.noreply.github.com>

--- a/Homepage/academic_writing.html
+++ b/Homepage/academic_writing.html
@@ -42,14 +42,10 @@
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
     <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introacademicassignments.html">Academic Assignments</a>
     <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introacademicwriting.html">Academic Writing</a>
-    <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introcriticalthinking.html">Critical Thinking</a>
-    <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introreferencing.html">Referencing</a>
-    <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introexams.html">Exams</a>
-    <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introlecturestutorials.html">Lectures and Tutorials</a>
-    <a href="http://learnline.cdu.edu.au/studyskills/studyskills/intronotemaking.html">Note Making</a>
-    <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introreadingresearch.html">Research and Reading</a>
-    <a href="http://learnline.cdu.edu.au/studyskills/studyskills/intromanagingstudies.html">Managing Your Studies</a>
-    <a href="http://learnline.cdu.edu.au/studyskills/studyskills/videoresources.html">Videos and Interactives</a>
+    <a href="file:///C:/Users/Ditu/Desktop/Project/Final%20Project/Homepage/subpage1.html">What does critical thinking involve?</a>
+    <a href="file:///C:/Users/Ditu/Desktop/Project/Final%20Project/Homepage/reading_critically.html">Reading Critically</a>
+    <a href="file:///C:/Users/Ditu/Desktop/Project/Final%20Project/Homepage/academic_writing.html">Academic Assignments</a>
+    <a href="file:///C:/Users/Ditu/Desktop/Project/Final%20Project/Homepage/Tutorial%20and%20Seminar.html">Tutorial and Seminar Presentation</a>
   </div>
 
   <div id="main">
